Remove some unneeded parts from setup-windows.ps1